2014-12-04 Sarka Todorova <sarka.todorova@cern.ch>
	* fpe fix in span calculation
	* tagged as MuonTrackingGeometry-01-00-17

2014-11-29 Peter Kluit
        * fix to build MuonSpectrometerEntrance
        * tagged as MuonTrackingGeometry-01-00-16

2014-11-28 Sarka Todorova <sarka.todorova@cern.ch>
	* restore inner object envelopes for better cpu performance
	* tagged as MuonTrackingGeometry-01-00-15

2014-11-27 Sarka Todorova <sarka.todorova@cern.ch>
	* memory leak fix (Goetz Gaycken)
	* tagged as MuonTrackingGeometry-01-00-14

2014-11-21 Peter Kluit 
	* Several fixes and updates MuonInertMaterialBuider and MuonTrackingGeometryBuilder 
	* add detailed debug and warnings to track down volumes and materials (X0)
        * MIMB: simplifyShape is only called for blended material 
        * MTGB: update parameter z values for endcap 
	* fix some edge/boundary calculations 
	* tagged as MuonTrackingGeometry-01-00-13

2014-11-06 Peter Kluit 
	* enlarge outer barrel cylinder for new GEO R07
	* tagged as MuonTrackingGeometry-01-00-12

2014-09-10 Sarka Todorova <sarka.todorova@cern.ch>
	* elevator stations included and identified
	* default to resolved layers
	* tagged as MuonTrackingGeometry-01-00-11

2014-05-22 Sarka Todorova <sarka.todorova@cern.ch>
	* default inert material blending turned off
	* tagged as MuonTrackingGeometry-01-00-10

2014-02-13 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in sum of layer material (change of interface)
	* tagged as MuonTrackingGeometry-01-00-09

2014-02-06 Sarka Todorova <sarka.todorova@cern.ch>
	* change in material interface
	* tagged as MuonTrackingGeometry-01-00-08

2014-01-27 Sarka Todorova <sarka.todorova@cern.ch>
	* fix of layer material averaging
	* fix of spacer beams warnings
	* tagged as MuonTrackingGeometry-01-00-07

2014-01-14 Sarka Todorova <sarka.todorova@cern.ch>
	* cleanup of transform initialization 
	* output level configured
	* tagged as MuonTrackingGeometry-01-00-06
